[package]
name = "hype"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
csv = "*"
chrono = "*"
rand = "*"
mimalloc = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tinyvec = "*"
tpe = "*"
